v 1.4.0.9 (14 jun)

Sky palace will now require megaliths instead of gold. Every level of SP will boost gold cap by 1%
UU will now require slightly less gold
SS will now require slightly less ivory.

v 1.4.0.8 (5 jun)

Fixed issues with Shatter TC visibility

High level Ziggurat Upgrades will now require gold.
Burn paragon button will now go at the bottom of the panel.

Zebra diplomacy will now explain upgrade in more details.
Engineering will now explain upgrade in more details.
Cargo Ships were renamed to Expanded Cargo.
Navigation will explain how culture price works.

Codex upgrades will now provide 5% multiplicative bonus to the craft

v 1.4.0.7 (7 apr)

Unicorn Necropolis
Spice Refinery

Fixed resources not being highlighted for buildings
Fixed tonns of issues from previous update

v 1.4.0.6 (20 mar)

Void Rift price is reduced from 100 to 75
Void Rift effect is increased from 1% to 2%
Quarry steel price was reduced from 150 to 125

v 1.4.0.5 (12 mar)

changes by coderpatsy:

Fix zooming in on first zoom out when using the sleek theme
Fix chrono furnace fuel being wasted when you have less than 1 TC when it activates
Add fast praise button
Add message after managing jobs
Floor craft amounts for multiplying prices and actually crafting; buttons already floor to check if they should display at all Also fix a stray global leak
__
Reduced Calciner steel price from 125 to 100
Redshift
Black Nova effect should be now applicable


v 1.4.0.4 (25 jan 2017)
Turn Smoothly was renamed to Chronosurge
Blazar will now boost RR by 2%
Black Nova will now boost energy production by 2%
Unicorn Rifts will now get a 10% synergy from the Ziggurat buildings

Ctrl+Click will now by x10 buildings

Balance tweaks:
Scientist trait effect was changed from 1% to 5%
Quarry base price and coal production were slightly buffed.
Ziggurat base price and megalith craft price were slightly reduced.

changes by tommitscheck:
Fixed Stats menu item not working in FF

v 1.4.0.3 (14 jan 2017)
